--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
-        "twig/twig": "~3.0",
-        "phpmailer/phpmailer": "^6.6"
+        "twig/twig": "~3.0"
     },
     "autoload": {
         "psr-4": {
